--- a/index.html
+++ b/index.html
@@ -1,17 +1,228 @@
 <!doctype html>
+<!--
+Created using JS Bin
+http://bin.webduino.io
+
+Copyright (c) 2020 by anonymous (http://bin.webduino.io/gekih/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title> 自走車遙控器 </title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="app.js"></script>
+  <title>Webduino Blockly Demo 09</title>
   <script src="https://blocklypro.webduino.io/node_modules/jquery/dist/jquery.min.js?rev=2f6b11a7e914718e0290410e85366fe9"></script>
   <script src="https://blocklypro.webduino.io/dist/lib/webduino-all-0.4.20.min.js?rev=4426739c00d85325cb2d3d701fa50666"></script>
   <script src="https://blocklypro.webduino.io/dist/webduino-blockly.min.js?rev=b1ada5fdae699e60af615c060e786d60"></script>
   <script src="https://blocklypro.webduino.io/dist/lib/firebase.min.js?rev=c0bfd493efd477d098a4ae9e92b13880"></script>
   <script src="https://blocklypro.webduino.io/dist/lib/runtime.min.js?rev=683a69503433786202911b4d9f766100"></script>
+<style id="jsbin-css">
+html,body{
+  font-family:'Verdana';
+  background:#333;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+#demo-area-09-controller{
+  position:relative;
+  box-sizing:border-box;
+  width:100%;
+  max-width:550px;
+  padding:20px 10px;
+  margin:0 auto;
+  overflow: hidden;
+  pointer-events: auto!important;
+}
+.demo-area-09-btn{
+  position:relative;
+  display:inline-block;
+  width:calc(33% - 8px);
+  height:60px;
+  background:#555;
+  margin:3px 1px;
+  text-align:center;
+  line-height:60px;
+  border-radius:5px;
+  color:#fff;
+  font-size:22px;
+  vertical-align: middle;
+  cursor:pointer;
+}
+.demo-area-09-btn:active{
+  background:#777;
+}
+@media (max-width:480px){
+  .demo-area-09-btn{
+    height:50px;
+    line-height:50px;
+    font-size:20px;
+  }
+}
+@media (max-width:400px){
+  .demo-area-09-btn{
+    height:45px;
+    line-height:45px;
+    font-size:18px;
+  }
+}
+.demo-area-09-btn.btn-power{
+  background:#d00;
+  height:60px;
+  width:60px;
+  border-radius:50%;
+  margin-bottom:10px;
+}
+.demo-area-09-btn.btn-power:active{
+  background:#f22;
+}
+.demo-area-09-btn.btn-show{
+  background:#357;
+  width:calc(100% - 80px);
+  margin-left:5px;
+  color:#acf;
+  margin-bottom:10px;
+  cursor:default;
+}
+@media (max-width:480px){
+  .demo-area-09-btn.btn-power{
+    height:50px;
+    width:50px;
+  }
+  .demo-area-09-btn.btn-show{
+    width:calc(100% - 70px);
+    margin-left:5px;
+    overflow:hidden;
+  }
+}
+@media (max-width:400px){
+  .demo-area-09-btn.btn-power{
+    height:45px;
+    width:45px;
+  }
+  .demo-area-09-btn.btn-show{
+    width:calc(100% - 60px);
+    margin-left:3px;
+  }
+}
+.demo-area-09-btn-group{
+  width:100%;
+  text-align:center;
+}
+.demo-area-09-btn.btn-range{
+  position:relative;
+  width:calc(100% - 20px);
+  height:20px;
+  display:block;
+  margin:25px auto;
+  background:#222;
+  cursor:default;
+}
+.demo-area-09-btn.btn-range-bar{
+  position:absolute;
+  width:32px;
+  height:50px;
+  top:-20px;
+  left:0;
+  background:#555;
+  line-height:50px;
+}
+.demo-area-09-btn.btn-range-bar:active{
+  background:#777;
+}
+.demo-area-09-btn-group.btn-direction-group{
+  margin-bottom:10px;
+}
+.demo-area-09-btn-group.btn-direction-group .demo-area-09-btn{
+  height:80px;
+  line-height:80px;
+}
+.demo-area-09-btn-group.btn-player-group{
+  margin-bottom:5px;
+}
+
+@media (max-width:480px){
+  .demo-area-09-btn-group.btn-direction-group .demo-area-09-btn{
+    height:70px;
+    line-height:70px;
+  }
+}
+@media (max-width:400px){
+  .demo-area-09-btn-group.btn-direction-group .demo-area-09-btn{
+    height:60px;
+    line-height:60px;
+  }
+}
+.demo-area-09-btn-group.btn-player-group .demo-area-09-btn{
+  width:calc(20% - 10px);
+  margin:5px 2px;
+}
+.demo-area-09-btn-group.btn-player-group .btn-pre{
+  font-size:14px;
+}
+.demo-area-09-btn-group.btn-player-group .btn-next{
+  font-size:14px;
+}
+
+.demo-area-09-btn-group.btn-menu-group .demo-area-09-btn{
+  width:calc(25% - 10px);
+  margin:5px 2px;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color1{
+  background:#d00;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color1:active{
+  background:#f22;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color2{
+  background:#0a0;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color2:active{
+  background:#2d2;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color3{
+  background:#09c;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color3:active{
+  background:#3bf;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color4{
+  background:#fb0;
+}
+.demo-area-09-btn-group.btn-menu-group .btn-color4:active{
+  background:#ff8;
+}
+
+.demo-area-09-input{
+  margin:25px auto;
+  -webkit-appearance: none;
+  border-radius:2px;
+  width:calc(100% - 8px);
+  height:20px;
+  background:none;
+  background-image:-webkit-linear-gradient(left ,#246 0%,#246 50%,#222 50%, #222 100%);
+  outline : none;
+  transition:.1s;
+  cursor:pointer;
+}
+.demo-area-09-input::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  width:32px;
+  height:50px;
+  background:#555;
+  border-radius:5px;
+  transition:.1s;
+}
+
+.demo-area-09-input::-webkit-slider-thumb:hover,
+.demo-area-09-input::-webkit-slider-thumb:active{
+  background:#777;
+}
+</style>
 </head>
 
 <body>
@@ -62,4 +273,65 @@
       </div>
     </div>
   </div>
+<script id="jsbin-javascript">
+var car;
+
+function getElement(dom) {
+  var element = document.querySelector(dom);
+  return element;
+}
+
+function controllerBtnEvent(c, e, callback) {
+  if (e !== 'click') {
+    var _u = navigator.userAgent;
+    if (_u.indexOf('Android') > -1 || _u.indexOf('iPhone') > -1 || _u.indexOf('iPad') > -1) {
+      c.addEventListener(e[1], function () {
+        callback();
+      });
+    } else {
+      c.addEventListener(e[0], function () {
+        callback();
+      });
+    }
+  } else {
+    c.addEventListener('click', function () {
+      callback();
+    });
+  }
+}
+
+
+boardReady({board: 'Smart', device: '10Vk7gDV', transport: 'mqtt'}, function (board) {
+  board.samplingInterval = 50;
+  car = getToyCar(board, 14, 16, 2, 5);
+  controllerBtnEvent(getElement('#demo-area-09 .btn-up'),['mousedown', 'touchstart'], function () {
+    car.goFront();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-down'),['mousedown', 'touchstart'], function () {
+    car.goBack();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-left'),['mousedown', 'touchstart'], function () {
+    car.turnLeft();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-right'),['mousedown', 'touchstart'], function () {
+    car.turnRight();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-center'),['mousedown', 'touchstart'], function () {
+    car.stop();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-up'),['mouseup', 'touchend'], function () {
+    car.stop();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-down'),['mouseup', 'touchend'], function () {
+    car.stop();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-left'),['mouseup', 'touchend'], function () {
+    car.stop();
+  });
+  controllerBtnEvent(getElement('#demo-area-09 .btn-right'),['mouseup', 'touchend'], function () {
+    car.stop();
+  });
+});
+
+</script>
 </body>
